@@ -232,3 +232,43 @@ span.topic-icon {
 .forum-jump-links .af-button-small span {
 }
 
+
+/* CSS only buttonizing via http://css-tricks.com/examples/ButtonMaker */
+a.af-button-large,
+a.af-button-large:link, 
+a.af-button-large:visited {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.af-button-large {
+   border-top: 1px solid #c5d0d6;
+   background: #575d61;
+   background: -webkit-gradient(linear, left top, left bottom, from(#8f8f8f), to(#575d61));
+   background: -moz-linear-gradient(top, #8f8f8f, #575d61);
+   padding: 5px 10px;
+   -webkit-border-radius: 8px;
+   -moz-border-radius: 8px;
+   border-radius: 8px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 14px;
+   font-family: Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+}
+   
+a.af-button-large:hover {
+   border-top-color: #b3b3b3;
+   background: #b3b3b3;
+   color: #616161;
+}
+   
+a.af-button-large:active {
+  color: #ffffff;
+  border-top-color: #a3a6a8;
+  background: #a3a6a8;
+}
